--- a/Lost Light/Packages/manifest.json
+++ b/Lost Light/Packages/manifest.json
@@ -1,9 +1,12 @@
 {
   "dependencies": {
+    "com.unity.ai.navigation": "1.1.5",
     "com.unity.cinemachine": "2.10.1",
     "com.unity.collab-proxy": "2.4.3",
     "com.unity.feature.development": "1.0.1",
     "com.unity.inputsystem": "1.7.0",
+    "com.unity.ml-agents": "file:C:/Users/seyfullahkorkmaz/MLAgent-OUA/ml-agents/com.unity.ml-agents",
+    "com.unity.ml-agents.extensions": "file:C:/Users/seyfullahkorkmaz/MLAgent-OUA/ml-agents/com.unity.ml-agents.extensions",
     "com.unity.render-pipelines.universal": "14.0.11",
     "com.unity.shadergraph": "14.0.11",
     "com.unity.textmeshpro": "3.0.9",
